# cpfrp

./: .gitignore  README.md
ch02/json_dynamic/: Cargo.toml
ch02/json_dynamic/src/: main.rs
ch02/json_static/: Cargo.toml
ch02/json_static/src/: main.rs
ch02/postgresql_example/: Cargo.toml  compose.yml
ch02/postgresql_example/src/: main.rs
ch02/redis_example/: Cargo.toml  compose.yml
ch02/redis_example/src/: main.rs
ch02/sqlite_example/: Cargo.toml  Dockerfile
ch02/sqlite_example/src/: main.rs
ch02/toml_dynamic/: Cargo.toml
ch02/toml_dynamic/src/: main.rs
ch02/toml_static/: Cargo.toml
ch02/toml_static/src/: main.rs
ch03/file_transfer/: Cargo.toml
ch03/file_transfer/src/: main.rs
ch03/memory_db/: Cargo.toml
ch03/memory_db/src/: db_access.rs  main.rs
ch05/adder/: Cargo.toml  index.html
ch05/adder/src/: main.rs
ch05/incr/: Cargo.toml
ch05/incr/src/: main.rs
ch05/login/: Cargo.toml  index.html
ch05/login/src/: db_access.rs  login.rs  main.rs  one_person.rs  persons_list.rs
ch05/persons_db/: Cargo.toml
ch05/persons_db/src/: db_access.rs  main.rs
ch05/yclient/: Cargo.toml  index.html
ch05/yclient/src/: common.rs  login.rs  main.rs  persons_list.rs
ch07/gg_assets_slalom/: Cargo.toml
ch07/gg_assets_slalom/src/: main.rs
ch07/gg_silent_slalom/: Cargo.toml
ch07/gg_silent_slalom/src/: main.rs
ch07/gg_ski/: Cargo.toml
ch07/gg_ski/src/: main.rs
ch07/gg_whac/: Cargo.toml
ch08/calc_analyzer/: Cargo.toml
ch08/calc_compiler/: Cargo.toml
ch08/calc_interpreter/: Cargo.toml
ch08/calc_parser/: Cargo.toml
(+18 files in other folders)
