[package]
name = "yclient"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.21", features = ["csr"] }
yew-hooks = "0.3"
web-sys = { version = "0.3", features = ["Element", "Window"] }
serde = "1.0"
serde_derive = "1.0"
base64 = "0.22"
reqwest = { version = "0.11", features = ["json"] }
